--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -26,12 +26,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org/
-          cache: "yarn"
+          cache: "pnpm"
       - uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
       - name: "Install"
-        run: yarn install
+        run: pnpm install
       - name: Create envfile for testing
         run: |
           touch .env
@@ -40,14 +40,14 @@ jobs:
           echo PHONE_ID=${{ secrets.PHONE_ID }} >> .env
           echo MESSAGE_TO=${{ secrets.MESSAGE_TO }} >> .env
       - name: "Test"
-        run: yarn test
+        run: pnpm test
       - name: Upload coverage reports to Codecov
         run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov -t ${CODECOV_TOKEN}
       - name: "Run build"
-        run: yarn run build
+        run: pnpm build
       # Semantic release is configured to create a tag and publish the package to npm
       - name: "Version and Npm publish"
         run: npx semantic-release
