--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,13 @@
 # don't ever lint node_modules
+
 node_modules
 yarn.lock
+pnpm-lock.yaml
+
 # don't lint build output (make sure it's set to your correct build folder name)
+
 dist
+
 # don't lint nyc coverage output
+
 coverage
